--- a/src/app/componnets/base/base.component.html
+++ b/src/app/componnets/base/base.component.html
@@ -1,7 +1,8 @@
 <div class="mb-3 row">
   <div class="col-xs-3 col-sm-auto">
-    <form #form="ngForm" (submit)="onSubmit()">
-<input type="text" class="form-control mr-sm-2" placeholder="Keresés" name="city" [(ngModel)]="cityName">
+  <form #form="ngForm" (submit)="onSubmit()">
+  <h6>Kereső:</h6>
+<input type="text" class="form-control mr-sm-2" placeholder="Kereső"  name="city"  [(ngModel)]="cityName"/>
 </form>
   </div>
 </div>
